--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
 
-    <link rel="stylesheet" href="../componentes/header/headerComponent.css">
     <link rel="stylesheet" href="../config.css">
 </head>
 <body>
 
-    <script src="../views/dashboardView.js" type="module"></script>
+    <script src="../views/dashboard.js"></script>
 </body>
 </html>
